Implement first test for PR merge hook script